# streetlightd

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  copy-amd64  copy-raspbian  env-amd64.sh  env-raspbian.sh  rootfs.sh  run-amd64  run-raspbian  shell-amd64  shell-raspbian  shell.sh  streetlight.dbus.xml  streetlightd.dbus.xml  streetlightd.pro  unit-test.pro  workspace-id.sh  workspace.sh
source/: Application.cpp  Application.h  Application_Test.cpp  BrightnessSensor.cpp  BrightnessSensor.h  Brightness_Mock.h  CMakeLists.txt  KeyValueEncoder.cpp  KeyValueEncoder.h  KeyValueEncoder_Test.cpp  LocalMqtt.h  Mqtt.cpp  Mqtt.h  MqttTest.cpp  MqttTest.h  Presentation_Mock.h  ProtocolStack.h  SensorListener.h  Session.h  Session_Mock.h  StreetlightProxy.h  Timer.h  azure-sas-token.cpp  main.cpp  session-test.cpp  streetlightd.cpp
source/amqp/: .gitignore  AMQPSession.cpp  AMQPSession.h  AmqpSession.cpp  AmqpSession.h  CMakeLists.txt  main.cpp
source/application/: ActiveApplication.cpp  ActiveApplication.h  Actor.h  Application.cpp  Application.h  Brightness.h  Forwarder.cpp  Forwarder.h  Presentation.h  PresentationListener.h  TimerListener.h
source/application/test/: Actor_Mock.h  Application_Mock.h  Application_Test.cpp  Brightness_Mock.h  Forwarder_Test.cpp  PresentationListener_Mock.h  Presentation_Mock.h  Sensor_Mock.h
source/ci/: README.md  build.sh  documentation.sh  test.sh
source/dbus/: BrightnessSensor.cpp  BrightnessSensor.h  Configuration.h  DbusData.h  DbusTimer.cpp  LuminosityActor.cpp  LuminosityActor.h  Streetlight.cpp  Streetlight.h  StreetlightProxy.h  Timer.cpp  Timer.h  TimerAdaptor.h
source/doxygen/: usage_part2.dox.fragment
source/features/: control multiple lamps from the same device.feature  send data to the cloud.feature  session test.feature  use the lamp offline.feature  user interface.feature
source/features/steps/: convert.py  dbus-steps.py
source/infrastructure/: ActiveObject.cpp  ActiveObject.h  CommandLineParser.cpp  CommandLineParser.h  Factory.h  InternalTimer.cpp  InternalTimer.h  Queue.cpp  Queue.h  SasToken.cpp  SasToken.h  StackFactory.cpp  StreetlightdArgumentParser.cpp  StreetlightdArgumentParser.h  Timer.h  TimerConfiguration.h  TimerFactory.cpp  TimerFactory.h
source/infrastructure/cli/: CommandLineParser.cpp  CommandLineParser.h  EnumOption.cpp  EnumOption.h  PocoParser.cpp  Streetlightd.cpp  Streetlightd.h  StreetlightdArgumentParser.cpp  StreetlightdArgumentParser.h
source/infrastructure/cli/test/: CommandLineParser_Mock.h  CommandLineParser_Test.cpp  EnumOption_Test.cpp  StreetlightdArgumentParser_Test.cpp  Streetlightd_Test.cpp
source/infrastructure/concurrency/: Queue.h
source/infrastructure/test/: CommandLineParser_Mock.h  CommandLineParser_Test.cpp  Factory_Mock.h  Factory_Test.cpp  SasToken_Test.cpp  StreetlightdArgumentParser_Test.cpp
source/presentation/: KeyValueDecoder.cpp  KeyValueDecoder.h  KeyValueEncoder.cpp  KeyValueEncoder.h  Session.h  SessionListener.h
source/presentation/test/: KeyValueDecoder_Test.cpp  KeyValueEncoder_Test.cpp  Session_Mock.h
source/protocolstack/: ProtocolStack.h  StackFactory.cpp  StackFactory.h
source/protocolstack/application/: ActiveApplication.cpp  ActiveApplication.h  Application.h  Debug.cpp  Debug.h  Forwarder.cpp  Forwarder.h  IncomingMessage.h  Offline.h  OutgoingMessage.h  Sensor.h
source/protocolstack/application/message/: DebugFormat.cpp  DebugFormat.h  Incoming.cpp  Incoming.h  Message.cpp  Message.h  Outgoing.cpp  Outgoing.h  PrintFormat.h  Printer.cpp  Printer.h  Property.h  Value.h  Visitor.h  format.cpp  format.h  propertyNames.cpp  propertyNames.h  propertyNumbers.cpp  propertyNumbers.h
source/protocolstack/application/test/: Application_Mock.h  Forwarder_Test.cpp  MessageValue_Test.cpp  Offline_Test.cpp
source/protocolstack/presentation/: Binary.h  BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  BinaryParser.cpp  BinaryParser.h  BinaryPrintFormat.h  Decoder.cpp  Decoder.h  Factory.cpp  Factory.h  JsonDecoder.cpp  JsonDecoder.h  JsonEncoder.cpp  JsonEncoder.h  JsonParser.h  JsonPrintFormat.cpp  KeyValueDecoder.cpp  KeyValueDecoder.h  KeyValueEncoder.cpp  KeyValueEncoder.h  KeyValueParser.cpp  KeyValueParser.h  KeyValuePrintFormat.cpp  KeyValuePrintFormat.h  Message.cpp  Message.h  Null.cpp  Null.h  Parser.h  Presentation.h
source/protocolstack/presentation/test/: BinaryDecoder_Test.cpp  BinaryEncoder_Test.cpp  JsonDecoder_Test.cpp  JsonEncoder_Test.cpp  JsonPrintFormat_Test.cpp  KeyValueDecoder_Test.cpp  KeyValueEncoder_Test.cpp  KeyValueParser_Test.cpp  KeyValuePrintFormat_Test.cpp  Message_Test.cpp  Null_Test.cpp
source/protocolstack/session/: AzureAmqp.cpp  AzureAmqp.h  AzureAmqpWs.cpp  AzureAmqpWs.h  AzureHttp.cpp  AzureHttp.h  AzureMqtt.cpp  AzureMqtt.h  Configuration.h  Factory.cpp  Factory.h  HttpTransfer.cpp  HttpTransfer.h  LocalMqtt.cpp  LocalMqtt.h  Null.cpp  NullSession.cpp  NullSession.h  Session.h  SessionConfiguration.h  SimpleMqtt.cpp  SimpleMqtt.h
source/protocolstack/session/amqp/: AmqpSession.cpp
source/protocolstack/session/http/: Session.cpp  Session.h  Transfer.cpp  Transfer.h
source/protocolstack/session/mqtt/: Azure.h  Client.cpp  Client.h  Configuration.h  Simple.cpp  util.cpp  util.h
source/protocolstack/test/: StackFactory_Test.cpp
source/session/: LocalMqtt.cpp  LocalMqtt.h
source/source/: session-test.cpp  streetlightd.cpp
source/source/dbus/: DbusTimer.h
source/source/infrastructure/: InternalTimer.cpp  InternalTimer.h  SasToken.cpp  SasToken.h
source/source/infrastructure/cli/: Parser.h  PocoParser.h  Streetlightd.cpp  Streetlightd.h
source/source/infrastructure/concurrency/: ActiveObject.cpp  ActiveObject.h  Queue.cpp  Timer.cpp  Timer.h
source/source/protocolstack/application/: ActiveApplication.cpp  ActiveApplication.h  Application.h  Debug.h  Factory.cpp  Factory.h  Forwarder.h  Offline.cpp  Offline.h
source/source/protocolstack/presentation/: BinaryPrintFormat.cpp  Factory.cpp  JsonParser.cpp  JsonPrintFormat.cpp  Message.cpp  (+5 more)
(+67 files in other folders)
